--- a/Code/CSS/Global/Header.css
+++ b/Code/CSS/Global/Header.css
@@ -1,19 +1,58 @@
+/* Στυλ για το ενεργό link */
+nav ul li a.active {
+  /* Προσαρμόζεις το στυλ όπως θέλεις για το ενεργό link */
+  font-weight: bold; /* Για παράδειγμα, εδώ χρησιμοποιώ bold κείμενο */
+  color: gold; /* Χρώμα του ενεργού link */
+}
+
+body {
+  font-family: Arial, sans-serif;
+  padding: 0;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #430063;
   color: white;
-  padding: 10px 20px;
+  margin-bottom: 4%;
+  padding: 1% 3%;
   text-align: center;
 }
 
+@media only screen and (max-width: 600px) {
+  header {
+    margin-bottom: 5%;
+  }
+}
+
+#user-options{
+  text-align: bottom;
+}
+
 header h1 {
-  margin-right: -450px;
-  font-size: 20px;
-  flex-grow: 1; /* Ο τίτλος καταλαμβάνει τον διαθέσιμο χώρο */
+  text-align: center;
+  /* margin-left: 3%;
+  margin-right: 3%; */
+  font-size: large;
+  padding: auto;
   color: gold;
   text-shadow: 2px 2px 4px rgba(241, 239, 215, 0.5);
+}
+
+@media only screen and (max-width: 600px) {
+  header h1 {
+    /* margin-left: 3%; */
+    /* margin-right: 3%; */
+    text-align: center;
+    padding: auto;
+    font-size: medium;
+  }
 }
 
 .admin-profile {
@@ -23,15 +62,69 @@ header h1 {
 }
 
 .admin-profile img {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  margin-right: 10px;
+  margin-right: 3%;
+}
+
+@media only screen and (max-width: 600px) {
+  .admin-profile img {
+    width: 30px; /* Μείωση του μεγέθους σε μικρότερες οθόνες */
+    height: 30px;
+    margin-right: 5px; /* Μείωση του διαστήματος μεταξύ της εικόνας και του κειμένου */
+  }
 }
 
 .admin-name {
   font-weight: bold;
   font-size: medium;
+}
+
+.hamburger-menu {
+  display: none;
+  cursor: pointer;
+  position: absolute;
+  margin: 2% 1%;
+  right: 4%;
+  z-index: 1000;
+  transition: 0.4s; /* Προσθήκη μετάβασης για ομαλή κίνηση */
+}
+
+.hamburger-menu.show {
+  padding: auto;
+  position: fixed;
+  top: 35px; /* Υπολογίστε το κατάλληλο ύψος ανάλογα με τη δική σας σχεδίαση */
+  /* right: 5%; */
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: #333;
+  margin: 6px 1px;
+}
+
+.hamburger-menu.right .bar {
+  background-color: white; /* Χρώμα για τις γραμμές στη δεξιά πλευρά */
+}
+
+.hamburger-menu.right:hover .bar {
+  background-color: pink; /* Χρώμα για τις γραμμές στη δεξιά πλευρά κατά το hover */ 
+}
+
+@media only screen and (max-width: 600px) {
+  nav ul.hide-on-mobile {
+    display: none;
+  }
+
+  nav ul.show {
+    display: block;
+  }
+
+  .hamburger-menu {
+    display: block;
+  }
 }
 
 nav ul {
