--- a/Code/CSS/Global/filter_style.css
+++ b/Code/CSS/Global/filter_style.css
@@ -45,6 +45,9 @@
     border: 1px solid #ccc;
     background: white;
     z-index: 100;
+    max-height: 300px;  /* ή όποιο ύψος επιθυμείς */
+    overflow-y: auto;  /* ενεργοποιεί το κάθετο scroll */
+    overflow-x: hidden;  /* κρύβει το οριζόντιο scroll αν δεν είναι απαραίτητο */
   }
   
   .custom-dropdown div {
@@ -70,3 +73,59 @@
   .category-checkbox-filter:checked + label {
     color: #9900ffb9; /* Χρώμα όταν το checkbox είναι επιλεγμένο */
   }
+
+  .custom-dropdown::-webkit-scrollbar {
+    width: 10px; /* Πλάτος του scrollbar */
+}
+
+.custom-dropdown::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Χρώμα του track (της διαδρομής που κινείται ο scrollbar) */
+}
+
+.custom-dropdown::-webkit-scrollbar-thumb {
+    background: #888; /* Χρώμα της λαβής του scrollbar */
+}
+
+.custom-dropdown::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Χρώμα της λαβής όταν το ποντίκι περνάει πάνω της */
+}
+
+/* Βασικό στυλ για όλα τα <select> elements σε όλες τις φόρμες */
+select {
+  width: 100%; /* Πλήρης πλάτος στο περιβάλλον του container */
+  padding: 8px 12px; /* Προσθήκη padding για καλύτερο look και αίσθηση */
+  margin: 8px 0; /* Κάποιο margin γύρω από το dropdown */
+  box-sizing: border-box; /* Βοηθάει το width να παραμένει σωστό ακόμη και με padding */
+  border: 1px solid #ccc; /* Προσθήκη ενός στοιχείου περιμέτρου */
+  border-radius: 4px; /* Στρογγυλεμένες γωνίες */
+  background-color: white; /* Θέτει το χρώμα φόντου σε λευκό */
+  cursor: pointer; /* Αλλάζει το δείκτη σε pointer όταν περνά πάνω */
+}
+
+select option {
+  padding: 8px 10px; /* Προσθήκη ελαφριάς απόστασης για καλύτερη αισθητική */
+  border-bottom: 1px solid #ccc; /* Διαχωριστική γραμμή ανάμεσα στα items */
+}
+
+/* Στυλ για τα options όταν το ποντίκι βρίσκεται πάνω τους */
+select option:hover {
+  background-color: #800080; /* Μωβ φόντο */
+  color: #FFD700; /* Χρυσά γράμματα */
+}
+
+/* Στυλ για το scrollbar εντός των select elements */
+select::-webkit-scrollbar {
+  width: 10px;
+}
+
+select::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+select::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+select::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
