--- a/Code/CSS/Global/Header.css
+++ b/Code/CSS/Global/Header.css
@@ -20,15 +20,8 @@ header {
   align-items: center;
   background-color: #430063;
   color: white;
-  margin-bottom: 4%;
   padding: 1% 3%;
   text-align: center;
-}
-
-@media only screen and (max-width: 600px) {
-  header {
-    margin-bottom: 5%;
-  }
 }
 
 #user-options{
@@ -37,22 +30,21 @@ header {
 
 header h1 {
   text-align: center;
-  /* margin-left: 3%;
-  margin-right: 3%; */
   font-size: large;
-  padding: auto;
   color: gold;
   text-shadow: 2px 2px 4px rgba(241, 239, 215, 0.5);
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 640px) {
   header h1 {
-    /* margin-left: 3%; */
-    /* margin-right: 3%; */
-    text-align: center;
-    padding: auto;
-    font-size: medium;
+    flex-direction: column; /* Αλλάζει τη διάταξη σε στήλη για μικρές οθόνες */
+    padding: 2% 0;
   }
+}
+
+header h1 {
+  font-size: medium;
+  padding: 0;
 }
 
 .admin-profile {
@@ -68,7 +60,7 @@ header h1 {
   margin-right: 3%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 640px) {
   .admin-profile img {
     width: 30px; /* Μείωση του μεγέθους σε μικρότερες οθόνες */
     height: 30px;
@@ -86,16 +78,15 @@ header h1 {
   cursor: pointer;
   position: absolute;
   margin: 2% 1%;
-  right: 4%;
+  right: 3%;
   z-index: 1000;
   transition: 0.4s; /* Προσθήκη μετάβασης για ομαλή κίνηση */
 }
 
 .hamburger-menu.show {
-  padding: auto;
-  position: fixed;
-  top: 35px; /* Υπολογίστε το κατάλληλο ύψος ανάλογα με τη δική σας σχεδίαση */
-  /* right: 5%; */
+  position: absolute;
+  top: 5vh; /* Το ύψος που κατεβαίνει το icon */
+  
 }
 
 .bar {
@@ -113,27 +104,30 @@ header h1 {
   background-color: pink; /* Χρώμα για τις γραμμές στη δεξιά πλευρά κατά το hover */ 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 640px) {
   nav ul.hide-on-mobile {
     display: none;
   }
 
   nav ul.show {
     display: block;
+    margin-right: 5%;
   }
 
   .hamburger-menu {
     display: block;
   }
+  
 }
 
 nav ul {
   list-style: none;
   display: flex;
+  padding: 0%;
 }
 
 nav li {
-  margin-right: 20px;
+  margin-right: 15px;
 }
 
 nav a {
@@ -144,7 +138,6 @@ nav a {
 nav a {
   color: white;
   text-decoration: none;
-  position: relative; /* Προσθήκη θέσης στοιχείου για το εφέ */
   transition: color 0.3s, transform 0.3s; /* Μετάβαση χρώματος και μετασχηματισμού */
 }
 
