--- a/Code/CSS/Global/toolbars_buttons.css
+++ b/Code/CSS/Global/toolbars_buttons.css
@@ -16,10 +16,11 @@
   border: none;
   border-radius: 25px; /* Δημιουργεί στρογγυλεμένα άκρα */
   padding: 8px 16px;
-  margin: 10px 0;
+  margin: 10% 2%;
   cursor: pointer;
-  width: 75%;
-  left: 48px;
+  width: 100%;
+  height: 65%;
+  /* left: 48px; */
 }
 
 #Show_History_Requests {
