--- a/Code/CSS/Global/login_signup.css
+++ b/Code/CSS/Global/login_signup.css
@@ -35,9 +35,8 @@ a {
   max-width: 525px;
   min-height: 670px;
   position: relative;
-  background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg)
-    no-repeat center;
-  background-size: cover; /* Νέος κανόνας για το background */
+  background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+  background-size: cover;
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
@@ -77,8 +76,8 @@ a {
 .login-html .tab {
   font-size: 22px;
   margin-right: 15px;
-  padding-bottom: 5px;
-  margin: 0 15px 10px 0;
+  padding: 3% 11%;
+  margin: 0 0 10px 0;
   display: inline-block;
   border-bottom: 2px solid transparent;
 }
@@ -103,9 +102,16 @@ a {
 .login-form .group .label,
 .login-form .group .input,
 .login-form .group .button {
+  /* margin-top: 5%; */
   width: 100%;
   color: #fff;
   display: block;
+}
+
+/* #login-form-id, */
+#sign-in-htm-id,
+#group-id {
+  margin-top: 3%;
 }
 
 .login-form .group .input,
@@ -190,7 +196,7 @@ a {
 
 .hr {
   height: 2px;
-  margin: 60px 0 50px 0;
+  margin: 8% 0 6% 0;
   background: rgba(255, 255, 255, 0.2);
 }
 
@@ -205,9 +211,15 @@ a {
 }
 .icon {
   position: absolute;
-  top: 63%;
+  /* top: 65%; */
+  /* padding: 2%; */
   right: 10px;
-  transform: translateY(-40%);
+  transform: translateY(-50%);
+}
+
+.group .icon {
+  top: 65%;
+  padding: 2%;
 }
 
 .icon i {
@@ -230,4 +242,73 @@ a {
   background: #2b85e4; /* Αλλαγή χρώματος όταν το ποντίκι περνάει πάνω */
   transition: background 0.3s; /* Ομαλή μετάβαση */
   cursor: pointer;
+}
+
+/* Responsive styles */
+@media (max-width: 480px) {
+  .login-wrap {
+    max-width: 100%;
+    min-height: 100vh;
+    padding: 10px;
+    background-size: cover;
+    background-position: center center;
+  }
+  
+  .login-html {
+    padding: 30px 15px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(40, 57, 101, 0.9);
+  }
+
+  .login-html .tab {
+    font-size: 24px; /* Αυξήθηκε το μέγεθος των γραμμάτων */
+    margin-right: 0;
+    margin-bottom: 5px;
+    display: inline;
+    text-align: center;
+    cursor: pointer;
+  }
+
+  .login-html .sign-in-tab {
+    text-align: left;
+  }
+
+  .login-html .sign-up-tab {
+    text-align: right;
+  }
+
+  .login-form .group .label,
+  .login-form .group .input,
+  .login-form .group .button {
+    font-size: 18px; /* Αυξήθηκε το μέγεθος των γραμμάτων */
+
+  }
+
+  .login-form .group .label {
+    margin-top: 7%;
+    margin-bottom: 2%;
+  }
+
+  .login-form .group .input {
+    padding: 15px 40px 15px 15px; /* Αυξήθηκε το padding για να υπάρχει χώρος για τα εικονίδια */
+    margin-top: 20px;
+  }
+
+  .login-form .group .button {
+    padding: 15px;
+    margin-top: 7%;
+  }
+
+  .group .icon {
+    top: 70%;
+    padding: 3%;
+  }
+
+  .group .input {
+    padding-right: 40px; /* Χώρος για το εικονίδιο */
+  }
 }
