--- a/Code/CSS/Admin/forms_containers_style.css
+++ b/Code/CSS/Admin/forms_containers_style.css
@@ -36,6 +36,8 @@
   border-radius: 15px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Σκιά */
   z-index: 2;
+  max-height: 300px;
+  overflow-y: auto;
 }
 
 .categories-container {
